Fixed bug #42798 (__autoload() not triggered for classes used in method signature).